kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fiz-oai
  labels:
    app.kubernetes.io/part-of: fiz-oai
